[tool.poetry]
name = "anam-earth-be-fastapi"
version = "0.1.0"
description = ""
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"
packages = [{include = "anam_earth_be_fastapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

# Lint Configurations
[tool.isort]
force_single_line = true
profile = "black"
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
preview = true
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

# Typing Configurations
[tool.mypy]
python_version = "3.11"
strict = true
