[tool.poetry]
name = "anam-earth-be-fastapi"
version = "0.1.0"
description = ""
authors = ["Jeongseop Lim <jseoplim@gmail.com>"]
readme = "README.md"
packages = [{include = "anam_earth_be_fastapi", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
dependency-injector = "^4.41.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

# Lint Configurations
[tool.isort]
profile = "black"

[tool.black]
preview = true
target-version = ["py311"]

# Typing Configurations
[tool.mypy]
python_version = "3.11"
strict = true
